attempt at odds api

--- a/notebooks/homers-data-processing.ipynb
+++ b/notebooks/homers-data-processing.ipynb
@@ -13,26 +13,213 @@
     "import nfl_data_py as nfl\n",
     "import pandas as pd\n",
     "from src import utils\n",
-    "from src.config import BETTING_PATH, HOMERS_PATH\n",
-    "import plotly.express as px\n"
+    "from src import homers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add Latest Week"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(f'{HOMERS_PATH}/homers-processed.pkl')\n"
+    "SEASON, WEEK = 2023, 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pick</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Hunter</th>\n",
+       "      <th>Harry</th>\n",
+       "      <th>Griffin</th>\n",
+       "      <th>Ben</th>\n",
+       "      <th>Chuck</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BB</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>NYJ</td>\n",
+       "      <td>SF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BUF</td>\n",
+       "      <td>BUF</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>BUF</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>NYJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>BUF</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>BAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>NYJ</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>JAX</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Pick Team Hunter Harry Griffin  Ben Chuck\n",
+       "0   BB   LA    MIA   CAR      LA  NYJ    SF\n",
+       "1    1  BUF    BUF   IND     ARI  BUF    LA\n",
+       "2    2   KC    IND   ARI      SF  MIN   NYJ\n",
+       "3    3  IND     KC    NE     BUF   SF   BAL\n",
+       "4    4   SF    NYJ   PIT      NO  MIA   JAX"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_week_raw = pd.read_clipboard()\n",
+    "print(new_week_raw.shape)\n",
+    "new_week_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(54, 18)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_week_processed = homers.process_picks(new_week_raw, WEEK, SEASON)\n",
+    "print(new_week_processed.shape)\n",
+    "new_week_processed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1916, 18)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pick_df = pd.read_pickle(homers.PROCESSED_FILE_PATH)\n",
+    "pick_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1965, 18)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pick_df = pd.concat([pick_df, new_week_processed], ignore_index=True).drop_duplicates()\n",
+    "pick_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed.to_pickle(f'{HOMERS_PATH}/homers-processed.pkl')"
+    "pick_df.to_pickle(homers.PROCESSED_FILE_PATH)"
    ]
   },
   {
