--- a/notebooks/market-implied-power-ratings.ipynb
+++ b/notebooks/market-implied-power-ratings.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "# Navigate up one level to the parent directory and append it to sys.path\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), os.pardir)))\n",
+    "\n",
     "from collections import defaultdict\n",
+    "from dotenv import load_dotenv\n",
     "import matplotlib.pyplot as plt\n",
     "import nfl_data_py as nfl\n",
     "import pandas as pd\n",
+    "import requests\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from visualisation import plot_team_scatter\n",
+    "from src.visualisation import plot_team_scatter\n",
+    "import src.utils\n",
+    "from src.config import DATA_PATH\n",
     "\n",
     "pd.set_option('display.max_columns', None)"
    ]
@@ -25,25 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def derive_market_power_ratings(year):\n",
-    "    schedule = nfl.import_schedules([year])\n",
-    "    cols_of_interest = [\n",
-    "        'game_id',\n",
-    "        'week',\n",
-    "        'away_team', \n",
-    "        'home_team',\n",
-    "        'total',\n",
-    "        'spread_line'\n",
-    "    ]\n",
-    "    # weeks_of_interest = list(range(9, 18))\n",
-    "    # df = schedule[schedule['week'].isin(weeks_of_interest)][cols_of_interest].copy()\n",
-    "    df = schedule[cols_of_interest].copy()\n",
-    "    del schedule\n",
-    "\n",
+    "def derive_market_power_ratings(df):\n",
     "    # function to calculate the expected score for home and away based on the spread and total\n",
     "    exp_home_score = lambda row: (row['total'] + row['spread_line'])/2\n",
     "    exp_away_score = lambda row: (row['total'] - row['spread_line'])/2\n",
@@ -78,9 +73,6 @@
     "            'score': scaled_away,\n",
     "        })\n",
     "\n",
-    "    # create a sorted list of teams\n",
-    "    teams = list(sorted(df['home_team'].unique()))\n",
-    "\n",
     "    # turn the system of equations into a dataframe, fill teams not in that game as 0's\n",
     "    system_df = pd.DataFrame(system).fillna(0)\n",
     "\n",
@@ -112,6 +104,383 @@
     "    power_ratings = power_ratings[['ovr', 'off', 'def']].copy()\n",
     "    return power_ratings.sort_values('ovr', ascending=False), hfa"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = nfl.import_schedules([2023])\n",
+    "cols_of_interest = [\n",
+    "    'game_id',\n",
+    "    'week',\n",
+    "    'away_team', \n",
+    "    'home_team',\n",
+    "    'total',\n",
+    "    'spread_line'\n",
+    "]\n",
+    "# weeks_of_interest = list(range(9, 18))\n",
+    "# df = schedule[schedule['week'].isin(weeks_of_interest)][cols_of_interest].copy()\n",
+    "df = df[cols_of_interest]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>week</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>total</th>\n",
+       "      <th>spread_line</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6499</th>\n",
+       "      <td>2023_06_DEN_KC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>10.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6500</th>\n",
+       "      <td>2023_06_BAL_TEN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>BAL</td>\n",
+       "      <td>TEN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6501</th>\n",
+       "      <td>2023_06_WAS_ATL</td>\n",
+       "      <td>6</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6502</th>\n",
+       "      <td>2023_06_MIN_CHI</td>\n",
+       "      <td>6</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6503</th>\n",
+       "      <td>2023_06_SEA_CIN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6504</th>\n",
+       "      <td>2023_06_SF_CLE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6505</th>\n",
+       "      <td>2023_06_NO_HOU</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6506</th>\n",
+       "      <td>2023_06_IND_JAX</td>\n",
+       "      <td>6</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>JAX</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6507</th>\n",
+       "      <td>2023_06_CAR_MIA</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6508</th>\n",
+       "      <td>2023_06_NE_LV</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>LV</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6509</th>\n",
+       "      <td>2023_06_ARI_LA</td>\n",
+       "      <td>6</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6510</th>\n",
+       "      <td>2023_06_PHI_NYJ</td>\n",
+       "      <td>6</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>NYJ</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-6.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6511</th>\n",
+       "      <td>2023_06_DET_TB</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>TB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6512</th>\n",
+       "      <td>2023_06_NYG_BUF</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NYG</td>\n",
+       "      <td>BUF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6513</th>\n",
+       "      <td>2023_06_DAL_LAC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              game_id  week away_team home_team  total  spread_line\n",
+       "6499   2023_06_DEN_KC     6       DEN        KC   27.0         10.5\n",
+       "6500  2023_06_BAL_TEN     6       BAL       TEN    NaN         -4.5\n",
+       "6501  2023_06_WAS_ATL     6       WAS       ATL    NaN          2.5\n",
+       "6502  2023_06_MIN_CHI     6       MIN       CHI    NaN         -3.0\n",
+       "6503  2023_06_SEA_CIN     6       SEA       CIN    NaN          3.0\n",
+       "6504   2023_06_SF_CLE     6        SF       CLE    NaN        -10.0\n",
+       "6505   2023_06_NO_HOU     6        NO       HOU    NaN         -1.5\n",
+       "6506  2023_06_IND_JAX     6       IND       JAX    NaN          4.0\n",
+       "6507  2023_06_CAR_MIA     6       CAR       MIA    NaN         14.0\n",
+       "6508    2023_06_NE_LV     6        NE        LV    NaN          3.0\n",
+       "6509   2023_06_ARI_LA     6       ARI        LA    NaN          7.0\n",
+       "6510  2023_06_PHI_NYJ     6       PHI       NYJ    NaN         -6.5\n",
+       "6511   2023_06_DET_TB     6       DET        TB    NaN         -3.0\n",
+       "6512  2023_06_NYG_BUF     6       NYG       BUF    NaN         15.0\n",
+       "6513  2023_06_DAL_LAC     6       DAL       LAC    NaN         -2.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['week']==6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Odds API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Access the variables\n",
+    "API_KEY = os.getenv(\"API_KEY\")\n",
+    "db_password = os.getenv(\"DB_PASSWORD\")\n",
+    "\n",
+    "SPORT = 'americanfootball_nfl' # use the sport_key from the /sports endpoint below, or use 'upcoming' to see the next 8 games across all sports\n",
+    "\n",
+    "REGIONS = 'us' # uk | us | eu | au. Multiple can be specified if comma delimited\n",
+    "\n",
+    "MARKETS = 'spreads,totals' # h2h | spreads | totals. Multiple can be specified if comma delimited\n",
+    "\n",
+    "ODDS_FORMAT = 'american' # decimal | american\n",
+    "\n",
+    "DATE_FORMAT = 'iso' # iso | unix\n",
+    "\n",
+    "# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # \n",
+    "#\n",
+    "# First get a list of in-season sports\n",
+    "#   The sport 'key' from the response can be used to get odds in the next request\n",
+    "#\n",
+    "# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # \n",
+    "\n",
+    "# sports_response = requests.get(\n",
+    "#     'https://api.the-odds-api.com/v4/sports', \n",
+    "#     params={\n",
+    "#         'api_key': API_KEY\n",
+    "#     }\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # \n",
+    "#\n",
+    "# Now get a list of live & upcoming games for the sport you want, along with odds for different bookmakers\n",
+    "# This will deduct from the usage quota\n",
+    "# The usage quota cost = [number of markets specified] x [number of regions specified]\n",
+    "# For examples of usage quota costs, see https://the-odds-api.com/liveapi/guides/v4/#usage-quota-costs\n",
+    "#\n",
+    "# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # \n",
+    "\n",
+    "odds_response = requests.get(\n",
+    "    f'https://api.the-odds-api.com/v4/sports/{SPORT}/odds',\n",
+    "    params={\n",
+    "        'api_key': API_KEY,\n",
+    "        'regions': REGIONS,\n",
+    "        'markets': MARKETS,\n",
+    "        'oddsFormat': ODDS_FORMAT,\n",
+    "        'dateFormat': DATE_FORMAT,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "if odds_response.status_code != 200:\n",
+    "    print(f'Failed to get odds: status_code {odds_response.status_code}, response body {odds_response.text}')\n",
+    "\n",
+    "else:\n",
+    "    odds_json = odds_response.json()\n",
+    "    print('Number of events:', len(odds_json))\n",
+    "    print(odds_json)\n",
+    "\n",
+    "    # Check the usage quota\n",
+    "    print('Remaining requests', odds_response.headers['x-requests-remaining'])\n",
+    "    print('Used requests', odds_response.headers['x-requests-used'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(odds_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(odds_json[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
