--- a/notebooks/elo-scrapers-nba.ipynb
+++ b/notebooks/elo-scrapers-nba.ipynb
@@ -2,38 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
     "import shutil\n",
+    "from datetime import datetime\n",
     "\n",
     "# Navigate up one level to the parent directory and append it to sys.path\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), os.pardir)))\n",
     "# import nfl_data_py as nfl\n",
     "import pandas as pd\n",
     "from src import utils\n",
-    "from src.config import DATA_PATH, SUMER_ELO_PATH, SUMER_OFFENSE_PATH, SUMER_DEFENSE_PATH, SUMER_PLAYER_PATH\n",
-    "from src.scrapers import scrape_inpredictable, scrape_unabated, scrape_espn, scrape_nfelo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Set Week"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WEEK = 8\n",
-    "SEASON = 2023"
+    "from src.config import INPREDICABLE_PATH"
    ]
   },
   {
@@ -60,10 +43,32 @@
     }
    ],
    "source": [
-    "scrape_inpredictable(WEEK, SEASON)\n",
-    "scrape_unabated(WEEK, SEASON)\n",
-    "scrape_espn(WEEK, SEASON)\n",
-    "scrape_nfelo(WEEK, SEASON)"
+    "def scrape_inpredictable_nba() -> None:\n",
+    "    df = pd.read_html(\"https://stats.inpredictable.com/rankings/nba.php\")[0]\n",
+    "    df.columns = df.columns.droplevel(level=0)\n",
+    "    df = utils.clean_df_columns(df)\n",
+    "\n",
+    "    # check the dataset is of the correct size\n",
+    "    print(df.shape)\n",
+    "\n",
+    "\n",
+    "    # Get the current date\n",
+    "    current_date = datetime.now()\n",
+    "\n",
+    "    # Format the date as \"yyyymmdd\" string\n",
+    "    formatted_date = current_date.strftime(\"%Y%m%d\")\n",
+    "\n",
+    "    print(formatted_date)\n",
+    "    # dont overwrite an existing file\n",
+    "    file_path = f\"{INPREDICABLE_PATH}/inpredictable-nba.csv\"\n",
+    "    if os.path.isfile(file_path):\n",
+    "        print(f\"{file_path} exists!\")\n",
+    "    else:\n",
+    "        # write the file to the correct path\n",
+    "        df.to_csv(file_path)\n",
+    "        print(\n",
+    "            f\"{utils.ANSI.GREEN}Success{utils.ANSI.RESET} - Inpredictable Week {week}\"\n",
+    "        )\n"
    ]
   },
   {
