--- a/notebooks/homers-data-processing.ipynb
+++ b/notebooks/homers-data-processing.ipynb
@@ -29,12 +29,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEASON, WEEK = 2023, 5"
+    "SEASON, WEEK = 2023, 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,52 +78,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>BB</td>\n",
-       "      <td>LA</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>CAR</td>\n",
-       "      <td>LA</td>\n",
-       "      <td>NYJ</td>\n",
-       "      <td>SF</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>LAR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>LA</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>LV</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>TB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>MIN</td>\n",
-       "      <td>NYJ</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>BUF</td>\n",
+       "      <td>WAS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>KC</td>\n",
-       "      <td>NE</td>\n",
+       "      <td>PHI</td>\n",
        "      <td>BUF</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>BAL</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>GB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>NYJ</td>\n",
-       "      <td>PIT</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>CLE</td>\n",
        "      <td>NO</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>JAX</td>\n",
+       "      <td>BAL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -131,14 +131,14 @@
       ],
       "text/plain": [
        "  Pick Team Hunter Harry Griffin  Ben Chuck\n",
-       "0   BB   LA    MIA   CAR      LA  NYJ    SF\n",
-       "1    1  BUF    BUF   IND     ARI  BUF    LA\n",
-       "2    2   KC    IND   ARI      SF  MIN   NYJ\n",
-       "3    3  IND     KC    NE     BUF   SF   BAL\n",
-       "4    4   SF    NYJ   PIT      NO  MIA   JAX"
+       "0   BB  SEA    CLE   PHI     DET   GB   LAR\n",
+       "1    1  CLE    PHI    LV     LAC  WAS    TB\n",
+       "2    2  WAS    SEA   WAS     SEA  BUF   WAS\n",
+       "3    3  PHI    BUF   DET     ATL  DET    GB\n",
+       "4    4  DET    WAS   LAC     CLE   NO   BAL"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,16 +151,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(54, 18)\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>picker</th>\n",
+       "      <th>pick</th>\n",
+       "      <th>season</th>\n",
+       "      <th>week</th>\n",
+       "      <th>spread_pick</th>\n",
+       "      <th>best_bet</th>\n",
+       "      <th>underdog_pick</th>\n",
+       "      <th>survivor_pick</th>\n",
+       "      <th>mnf_pick</th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>result</th>\n",
+       "      <th>spread_line</th>\n",
+       "      <th>away_pick</th>\n",
+       "      <th>away_cover</th>\n",
+       "      <th>home_cover</th>\n",
+       "      <th>pick_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>final</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2023_07_ARI_SEA</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hunter</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2023_07_ARI_SEA</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>harry</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2023_07_ARI_SEA</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>griffin</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2023_07_ARI_SEA</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>griffin</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2023_07_ARI_SEA</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(54, 18)"
+       "    picker pick  season  week  spread_pick  best_bet  underdog_pick  \\\n",
+       "0    final  SEA    2023     7         True      True          False   \n",
+       "1   hunter  SEA    2023     7         True     False          False   \n",
+       "2    harry  SEA    2023     7        False     False          False   \n",
+       "3  griffin  SEA    2023     7         True     False          False   \n",
+       "4  griffin  SEA    2023     7        False     False          False   \n",
+       "\n",
+       "   survivor_pick  mnf_pick          game_id away_team home_team  result  \\\n",
+       "0          False     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
+       "1          False     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
+       "2           True     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
+       "3          False     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
+       "4           True     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
+       "\n",
+       "   spread_line  away_pick  away_cover  home_cover  pick_result  \n",
+       "0          9.5      False           0           1          2.0  \n",
+       "1          9.5      False           0           1          1.0  \n",
+       "2          9.5      False           0           1          1.0  \n",
+       "3          9.5      False           0           1          1.0  \n",
+       "4          9.5      False           0           1          1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,16 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1916, 18)"
+       "(2016, 18)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,16 +369,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1965, 18)"
+       "(2070, 18)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
